<?xml version="1.0" encoding="utf-8"?>
<!-- Group 23 Assignment 04
  Hardik Thakkar
  Sindhuja Vemulapalli
  Roushan Qin  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_password"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:spinnerMode="dropdown"
        android:background="#a69696"
        android:dropDownSelector="#beb6b6"
        android:popupBackground="#726868" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers"
        android:id="@+id/checkBox_numbers"
        android:layout_below="@+id/spinner_password"
        android:layout_alignLeft="@+id/checkBox_lowercaseetters"
        android:layout_alignStart="@+id/checkBox_lowercaseetters"
        android:layout_marginTop="69dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uppercaseletters"
        android:id="@+id/checkBox_uppercaseletters"
        android:layout_below="@+id/checkBox_numbers"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercaseletter"
        android:id="@+id/checkBox_lowercaseetters"
        android:layout_below="@+id/checkBox_uppercaseletters"
        android:layout_alignLeft="@+id/checkBox_uppercaseletters"
        android:layout_alignStart="@+id/checkBox_uppercaseletters" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specialcharacters"
        android:id="@+id/checkBox_specialcharacters"
        android:layout_below="@+id/checkBox_lowercaseetters"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_password"
        android:layout_below="@+id/checkBox_specialcharacters"
        android:layout_alignRight="@+id/checkBox_numbers"
        android:layout_alignEnd="@+id/checkBox_numbers"
        android:layout_marginTop="52dp"
        android:textColor="#f41414"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generatePasswordThread"
        android:id="@+id/button_generatePasswordThread"
        android:layout_above="@+id/button_generatepasswordAsync"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generatePasswordAsync"
        android:id="@+id/button_generatepasswordAsync"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp" />

</RelativeLayout>
